# dogky

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  build.rs  justfile  pnpm-lock.yaml  pyproject.toml  readme.md
src/: config.rs  format_size.rs  freya_utils.rs  gtk_utils.rs  main.rs  message.rs  move_window.py  move_window.rs  move_window.sh  path.rs  serializable_rgba.rs  show-ram-frequency.service  style.css  style_utils.rs  styles.rs  styles_config.rs  ui_utils.rs  utils.rs
src/api/: mod.rs  open_weather_api.rs
src/components/: cpu_memory.rs  cpu_memory_widget.rs  disk.rs  disk_widget.rs  gpu.rs  gpu_widget.rs  machine_info.rs  machine_info_widget.rs  mod.rs  network.rs  network_widget.rs  weather.rs  weather_widget.rs  window.rs
src/components/cpu_memory_widget/: imp.rs  mod.rs  updater.rs
src/components/machine_info_widget/: imp.rs  mod.rs  updater.rs
src/components/weather_widget/: imp.rs  mod.rs  updater.rs
src/components/window/: imp.rs  mod.rs
src/custom_components/: bar.rs  graph.rs  label_right.rs  mod.rs  separator.rs
src/resources/: cpu_memory_widget.ui  disk_widget.ui  gpu_widget.ui  machine_info_widget.ui  network_widget.ui  resources.gresource.xml  style.css  style.sass  weather_widget.ui  window.ui
src/serde_structs/: mod.rs  serde_color.rs  serde_command.rs  serde_gaps.rs  serde_padding.rs  serde_regex.rs  serializable_command.rs  serializable_regex.rs
