[package]
name = "dogky"
version = "0.2.0"
edition = "2021"

[dependencies]
async-io = "2.6.0"
binary-heap-plus = "0.5.0"
chrono = "0.4.41"
circular-queue = "0.2.7"
csscolorparser = "0.8.1"
freya = { git = "https://github.com/marc2332/freya.git", features = ["engine"]  }
freya-clipboard = { git = "https://github.com/marc2332/freya.git" }
freya-core = { git = "https://github.com/marc2332/freya.git" }
freya-engine = { git = "https://github.com/marc2332/freya.git" }
futures-lite = "2.6.0"
heck = "0.5.0"
join-string = "0.3.0"
lazy_static = "1.5.0"
local-ip-address = "0.6.5"
nvml-wrapper = "0.11.0"
open = "5.3.2"
phf = { version = "0.13.1", features = ["macros"] }
public-ip = "0.2.2"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = { version = "1.0.143", features = ["float_roundtrip"] }
serde_yml = "0.0.12"
shlex = "1.3.0"
swayipc = "4.0.0"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
uname = "0.1.1"
velcro = "0.5.4"
whoami = "1.6.1"
winit = "0.30.12"
xdg = "3.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
