[package]
name = "dogky"
version = "0.2.0"
edition = "2024"

[dependencies]
async-io = "2.6.0"
binary-heap-plus = "0.5.0"
chrono = "0.4.44"
circular-queue = "0.2.7"
csscolorparser = "0.8.2"
freya = "0.4.0-rc.11"
freya-clipboard = "0.4.0-rc.11"
freya-core = "0.4.0-rc.11"
freya-engine = "0.4.0-rc.11"
futures-lite = "2.6.1"
getifs = "0.4.0"
heck = "0.5.0"
join-string = "0.3.0"
lazy_static = "1.5.0"
nvml-wrapper = "0.12.0"
open = "5.3.3"
phf = { version = "0.13.1", features = ["macros"] }
public-ip = "0.2.2"
regex = "1.12.3"
reqwest = "0.13.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
serde_yml = "0.0.12"
shlex = "1.3.0"
swayipc = "4.0.0"
sysinfo = "0.38.2"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
uname = "0.1.1"
velcro = "0.5.4"
whoami = "2.1.0"
winit = "0.30.12"
xdg = "3.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
