[project]
name = ''
version = ''
description = ''
authors = [
    {name = 'Steven Xu', email = 'stevenxxiu@gmail.com'},
]
dependencies = [
    'ewmh>=0.1.6',
    'xlib>=0.21',
]
requires-python = '>=3.13'
license = {text = 'MIT'}

[build-system]
requires = [
    'pdm-pep517>=1.0.0',
]
build-backend = 'pdm.pep517.api'

[tool.pdm]

[tool.pdm.dev-dependencies]
lint = [
    'vulture',
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.pylint]
init-hook = 'import sys; sys.path.append(".")'
disable = [
    'invalid-name',
    'missing-class-docstring',
    'missing-function-docstring',
    'missing-module-docstring',
    'no-member',
    'too-few-public-methods',
]
max-line-length = 120

[tool.pyright]
extraPaths = [
    '__pypackages__/3.13/lib/',
    '/usr/lib/python3.13/site-packages/pdm/pep582/',
]
